@@ -1,5 +1,6 @@
 Upcoming:
 - Re-added some XNet API classes
+- Started adding of dimensional shard oregen back
 
 1.16-2.0.7:
 - Fixed truetype rendering
